Updated help file
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@529 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Help/Donate.htm
+++ b/FileOptimizer/Help/Donate.htm
@@ -18,11 +18,6 @@ html,body {
 <b>Donate</b>
 <br >Voluntary donate using the <b>Paypal</b> the amount of money you choose to support FileOptimizer development. It is safe, secure and convenient.
 <br >
-<br ><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-	<input type="hidden" name="cmd" value="_s-xclick">
-	<input type="hidden" name="hosted_button_id" value="XE3E37GGZV6EY">
-	<input type="image" src="https://www.paypalobjects.com/en_US/ES/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-	<IMG border=0 alt="" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width=1 height=1>
-</form>
+<br ><a href="http://nikkhokkho.sourceforge.net/images/FileOptimizerDonate.html" target="_blank"><img src="images/donate.gif" width="152" height="47" border="0"></a>
 </P></body>
 </html>
