--- a/FileOptimizer/Help/Description.htm
+++ b/FileOptimizer/Help/Description.htm
@@ -16,51 +16,96 @@ html,body {
 <body>
 <P>
 <b>Description</b>:
-<br />Drag the files you want to optimize to the files grid in FileOptimizer, right click with the mouse to open the contextual menu, and then click on Optimize. This will process all supported files added, and overwrite them with the optimized version.
-<br />
-<br />Alternatively you can add the files and directories to process on the program&#039;s command-line, or dragging them to the executable file. A context menu for <i>Add files</i>, also does it.
-<br />
-<br />By default, FileOptimizer will remove additional metadata, and other unneeded information, but will keep original files in your recycle bin just in case you want to further modify the originals.
-<br />
-<br /><img src="images/fileoptimizer_description.png" width=750 height=566 border=0 alt=''>
-<br /><i>FileOptimizer context menu</i><br />
+<br >Drag the files you want to optimize to the files grid in FileOptimizer, right click with the mouse to open the contextual menu, and then click on Optimize. This will process all supported files added, and overwrite them with the optimized version.
+<br >
+<br >Alternatively you can add the files and directories to process on the program's command-line, or dragging them to the executable file. A context menu for <i>Add files</i>, also does it.
+<br >
+<br >By default, FileOptimizer will remove additional metadata, and other unneeded information, but will keep original files in your recycle bin just in case you want to further modify the originals.
+<br >
+<br ><IMG border=0 alt="" src="images/fileoptimizer_description.png" width=750 height=566>
+<br ><i>FileOptimizer context menu</i><br >
 
-<br />Different engines are automatically used depending on the file type:
-<br />
-<br />- AdvanceCOMP 1.20 beta - http://advancemame.sourceforge.net
-<br />- APNG Optimizer 1.4 - http://sourceforge.net/projects/apng/
-<br />- CSSTidy 1.3 - http://csstidy.sourceforge.net/download.php
-<br />- DeflOpt 2.07 - http://www.walbeehm.com/download/
-<br />- defluff 0.3.2 - http://j-o.users.sourceforge.net
-<br />- Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
-<br />- FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm 
-<br />- Flasm 1.62 - http://flasm.sourceforge.net
-<br />- Gifsicle 1.87 - http://www.lcdf.org/gifsicle/
-<br />- Ghostcript 9.16 - http://www.ghostscript.com
-<br />- GNU Strip 2.25 - http://www.gnu.org/software/binutils/
-<br />- ImageMagick 6.9.1.1 - http://www.imagemagick.org
-<br />- ImageWorsener 1.2.0 - http://entropymine.com/imageworsener
-<br />- jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
-<br />- jpegoptim 1.4.2 - http://www.kokkonen.net/tjko/projects.html
-<br />- jpegtran 9 - http://jpegclub.org/jpegtran/
-<br />- jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
-<br />- Leanify 0.4.2.43 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
-<br />- libwebp 0.4.3 - http://www.webmproject.org
-<br />- mkclean 0.8.7 - http://www.matroska.org/downloads/mkclean.html
-<br />- mozjpeg 3.00 - https://github.com/mozilla/mozjpeg
-<br />- MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
-<br />- mp4v2 2.0.0 r504 - https://code.google.com/p/mp4v2/
-<br />- OptiPNG Hg 20121021 - http://optipng.sourceforge.net
-<br />- PCXLite 1.0 - http://sol.gfxile.net/code.html
-<br />- PngOptimizer 2.4.1 - http://psydk.org/PngOptimizer
-<br />- PETrim 4.00 beta - http://pecompact.com/pesuite.php
-<br />- PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
-<br />- pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
-<br />- pngwolf - http://bjoern.hoehrmann.de/pngwolf
-<br />- rehuff - http://wiki.xiph.org/Rehuff
-<br />- tidy-html5 c63cc39 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
-<br />- TruePNG 0.5.0.4 - http://x128.ho.ua/pngutils.html
-<br />- ZLib 1.2.8 - http://www.zlib.net
-<br />- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
+<br >Different engines are automatically used depending on the file type:
+<br >
+<br >- AdvanceCOMP 1.20 - <A 
+href="http://advancemame.sourceforge.net">http://advancemame.sourceforge.net</A> 
+<BR>- APNG Optimizer 1.4 - <A 
+href="http://sourceforge.net/projects/apng/">http://sourceforge.net/projects/apng/</A> 
+<BR>- Coherent PDF Lossless Compressor (smpdf) 1.4.1 - <A 
+href="http://www.coherentpdf.com/compression.html">http://www.coherentpdf.com/compression.html</A> 
+<BR>- CSSTidy 1.3 - <A 
+href="http://csstidy.sourceforge.net/download.php">http://csstidy.sourceforge.net/download.php</A> 
+<BR>- DeflOpt 2.07 - <A 
+href="http://www.walbeehm.com/download/">http://www.walbeehm.com/download/</A> 
+<BR>- defluff 0.3.2 - <A 
+href="http://j-o.users.sourceforge.net">http://j-o.users.sourceforge.net</A> 
+<BR>- Document Press Version 6.01 - <A 
+href="http://encode.ru/threads/336-Document-Press-6-01">http://encode.ru/threads/336-Document-Press-6-01</A> 
+<BR>- ECT 0.6.1.0 - <A 
+href="https://github.com/fhanau/Efficient-Compression-Tool">https://github.com/fhanau/Efficient-Compression-Tool</A> 
+<BR>- FLACOUT 07/03/2014 - <A 
+href="http://advsys.net/ken/utils.htm">http://advsys.net/ken/utils.htm</A> <BR>- 
+Flasm 1.62 - <A 
+href="http://flasm.sourceforge.net">http://flasm.sourceforge.net</A> <BR>- 
+Gifsicle 1.88 - <A 
+href="http://www.lcdf.org/gifsicle/">http://www.lcdf.org/gifsicle/</A> <BR>- 
+Gifsicle Lossy 1.88 - <A 
+href="https://kornel.ski/lossygif">https://kornel.ski/lossygif</A> <BR>- 
+Ghostscript 9.19 - <A 
+href="http://www.ghostscript.com">http://www.ghostscript.com</A> <BR>- GNU Strip 
+2.26 - <A 
+href="http://www.gnu.org/software/binutils/">http://www.gnu.org/software/binutils/</A> 
+<BR>- ImageMagick 7.0.2.5 - <A 
+href="http://www.imagemagick.org">http://www.imagemagick.org</A> <BR>- 
+ImageWorsener 1.3.0 - <A 
+href="http://entropymine.com/imageworsener">http://entropymine.com/imageworsener</A> 
+<BR>- jhead 3.00 - <A 
+href="http://www.sentex.net/~mwandel/jhead/">http://www.sentex.net/~mwandel/jhead/</A> 
+<BR>- jpeg-archive 2.1.1 - <A 
+href="https://github.com/danielgtaylor/jpeg-archive">https://github.com/danielgtaylor/jpeg-archive</A> 
+<BR>- jpegoptim 1.4.3 - <A 
+href="http://www.kokkonen.net/tjko/projects.html">http://www.kokkonen.net/tjko/projects.html</A> 
+<BR>- jpegtran 9 - <A 
+href="http://jpegclub.org/jpegtran/">http://jpegclub.org/jpegtran/</A> <BR>- 
+jsmin 2013-03-29 - <A 
+href="http://www.crockford.com/javascript/jsmin.html">http://www.crockford.com/javascript/jsmin.html</A> 
+<BR>- Leanify 0.4.3.136 - <A 
+href="https://github.com/JayXon/Leanify">https://github.com/JayXon/Leanify</A> 
+(<A 
+href="https://ci.appveyor.com/project/JayXon/leanify">https://ci.appveyor.com/project/JayXon/leanify</A>) 
+<BR>- libwebp 0.4.4 - <A 
+href="http://www.webmproject.org">http://www.webmproject.org</A> <BR>- mkclean 
+0.8.7 - <A 
+href="http://www.matroska.org/downloads/mkclean.html">http://www.matroska.org/downloads/mkclean.html</A> 
+<BR>- mozjpeg 3.10 - <A 
+href="https://github.com/mozilla/mozjpeg">https://github.com/mozilla/mozjpeg</A> 
+<BR>- MP3packer 2.04 - <A 
+href="http://omion.dyndns.org/mp3packer/mp3packer.html">http://omion.dyndns.org/mp3packer/mp3packer.html</A> 
+<BR>- mp4v2 2.0.0 r504 - <A 
+href="https://code.google.com/p/mp4v2/">https://code.google.com/p/mp4v2/</A> 
+<BR>- OptiPNG 0.7.6 - <A 
+href="http://optipng.sourceforge.net">http://optipng.sourceforge.net</A> <BR>- 
+PCXLite 1.0 - <A 
+href="http://sol.gfxile.net/code.html">http://sol.gfxile.net/code.html</A> <BR>- 
+PngOptimizer 2.4.1 - <A 
+href="http://psydk.org/PngOptimizer">http://psydk.org/PngOptimizer</A> <BR>- 
+PETrim 4.00 beta - <A 
+href="http://pecompact.com/pesuite.php">http://pecompact.com/pesuite.php</A> 
+<BR>- PNGOUT 02/13/2015 - <A 
+href="http://advsys.net/ken/utils.htm">http://advsys.net/ken/utils.htm</A> <BR>- 
+pngquant 2.7.0a - <A href="http://www.pngquant.org">http://www.pngquant.org</A> 
+<BR>- pngrewrite 1.4.0 - <A 
+href="http://entropymine.com/jason/pngrewrite">http://entropymine.com/jason/pngrewrite</A> 
+<BR>- pngwolf - <A 
+href="http://bjoern.hoehrmann.de/pngwolf">http://bjoern.hoehrmann.de/pngwolf</A> 
+<BR>- rehuff - <A 
+href="http://wiki.xiph.org/Rehuff">http://wiki.xiph.org/Rehuff</A> <BR>- Tidy 
+5.1.14 - <A href="http://tidy.sourceforge.net">http://tidy.sourceforge.net</A> 
+<BR>- TruePNG 0.6.2.2 - <A 
+href="http://x128.ho.ua/pngutils.html">http://x128.ho.ua/pngutils.html</A> <BR>- 
+UPX 3.91 - <A href="http://upx.sourceforge.net">http://upx.sourceforge.net</A> 
+<BR>- ZLib 1.2.8 - <A href="http://www.zlib.net">http://www.zlib.net</A> <BR>- 
+zRecompress 2.12 - <A 
+href="http://nikkhokkho.sourceforge.net/static.php?page=zRecompress">http://nikkhokkho.sourceforge.net/static.php?page=zRecompress<    /A>
 </P></body>
 </html>
