--- a/FileOptimizer/Help/Requirements.htm
+++ b/FileOptimizer/Help/Requirements.htm
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Requeriments</title>
+<title>Requirements</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
 html,body { 
