Fixed some interface and help english typos (Armin Müller)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1373 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Help/Frequently Asked Questions (FAQ).htm
+++ b/FileOptimizer/Help/Frequently Asked Questions (FAQ).htm
@@ -46,7 +46,7 @@ html,body {
 <br >
 <br ><i>Why is the recompression process so slow?</i>
 <br >The speed of the recompression depends on the particular format of the file.
-<br >Noticeably PNG processing is the slowest, because the brute-force recompression to squeeze them. As oposite, PDF and JPEG files should be encoded pretty fast.
+<br >Noticeably PNG processing is the slowest, because the brute-force recompression to squeeze them. As opposite, PDF and JPEG files should be encoded pretty fast.
 <br >
 <br ><i>Does it work on other platforms than Windows?</i>
 <br >FileOptimizer is reported to work in some environments under UNIX based operating systems with Wine.
