Fix code spell and update languages (Armin Müller)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1398 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Help/Frequently Asked Questions (FAQ).htm
+++ b/FileOptimizer/Help/Frequently Asked Questions (FAQ).htm
@@ -83,7 +83,7 @@ Where:<br>
 - 
 "C:\PROYECTOS\FileOptimizer\_Tests\_ - copia\av-214_.zip": Is the full path of 
 the file to process.<BR><BR><EM>Is there a way to silent install 
-FileOptimizer?</EM><BR>You can specify the /S command-line swich to the 
+FileOptimizer?</EM><BR>You can specify the /S command-line switch to the 
 installer, and it will install FO with no prompts: <BR>FileOptimizerSetup.exe 
 /S<BR>Since it is implemented over NSIS, you can take a look at <A 
 href="http://nsis.sourceforge.net/Docs/Chapter3.html#installerusageexamples">http://nsis.sourceforge.net/Docs/Chapter3.html#installerusageexamples</A>
@@ -114,7 +114,7 @@ problems donating?</EM><BR>             Current <a href="http://nikkhokkho.sourc
 <br >
 <br ><i>Where is latest source code?</i>
 <br >Source code for releases is available in the <i>Download section</i> above.
-<br >Latest deveolpment code is available in the <A href="https://sourceforge.net/p/nikkhokkho/code/HEAD/tree/trunk/FileOptimizer/" target=_blank >SVN repository</A>.
+br >Latest development code is available in the <A href="https://sourceforge.net/p/nikkhokkho/code/HEAD/tree/trunk/FileOptimizer/" target=_blank >SVN repository</A>.
 <br >
 <br ><i>Where can I send suggestions, comments and bug reports?</i>
 <br >Better place for easily followup comments, suggestions and bug reports is on the <A href="https://sourceforge.net/p/nikkhokkho/discussion/" target=_blank >Discussion page at Sourceforge</A>.
